# audinter

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-release.yml
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
src/audinter/: metrics.py
src/inter_metrics/: __init__.py  inter_metrics.py
tests/: test_inter_metrics.py
