[tool.poetry]
name = "inter_metrics"
version = "0.1.0"
description = "Interpretability and complexity metrics ML models."
authors = ["Antónia Brito"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
